--- a/the-lander/style.css
+++ b/the-lander/style.css
@@ -1,15 +1,17 @@
 body {
     font-family: 'Lato';
+    text-align: center;
 }
 
 .container {
-    text-align: center;
+    
     width: 600px;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
 .title-text {
     background-color: #2e354f;
+    text-transform: uppercase;
     color: white;
     width: 400px;
     margin: 0 auto;
