--- a/responsive-image-collage/style.css
+++ b/responsive-image-collage/style.css
@@ -9,7 +9,7 @@ body {
 
 img {
 	width: 90%;
-	object-fit: cover;
+	object-fit: cover; /*allows the image to retain ratio and other properties so we can work with it without squissing the images.*/
 	margin: 1em;
 }
 
