--- a/style.css
+++ b/style.css
@@ -15,44 +15,46 @@ body {
 	color: #143774;
 	font-family: lora, serif;
 	font-weight: 400;
-	font-size: 2rem;
+	font-size: 3rem;
 	margin: 0.5em 1em; /* separates a bit from the edge and a bit from the top*/
 }
 
 .link {
 	color: #717171;
 	text-decoration: none;
+	text-transform: uppercase;
 	font-weight: 700;
 	margin: 1em;
 }
 
 .current-page {
-	border-bottom: solid 1px #717171;
+	text-decoration: underline;
 }
-
 
 /* layout */
 
 .nav{
 	display: flex;
 	flex-direction: row;
-	align-items: center;
 	justify-content: space-between;
+	align-items: center;
 }
 
 @media (max-width: 600px){
 	.nav {
 		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 	}
 
 	.links {
 		display: flex;
 		flex-direction: column;
+		flex-wrap: wrap;
+		 /* set to wrap in case we chage the flex-direction */
 		align-items: center;
-	}
-
-	.link {
-		margin: 0.5em;
+		justify-content: space-between;
+		margin: 1em;	
 	}
 }
 
